# 20-games

./: .clang-format  .gitignore  .gitmodules  README.md  justfile
cmake/: sokol.cmake
pong/: CMakeLists.txt
pong/src/: error.c  error.h  main.c  quad.glsl  types.h
